<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_16"
        android:text="@string/account_remove_title1"
        android:textColor="@color/FFD6D6DD"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_28"
        android:lineSpacingExtra="@dimen/dp_4"
        android:text="@string/account_remove_content1"
        android:textColor="@color/FF999999"
        android:textSize="@dimen/sp_12" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:text="@string/account_remove_title2"
        android:textColor="@color/FFD6D6DD"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_28"
        android:lineSpacingExtra="@dimen/dp_4"
        android:text="@string/account_remove_content2"
        android:textColor="@color/FF999999"
        android:textSize="@dimen/sp_12" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:text="@string/account_remove_title3"
        android:textColor="@color/FFD6D6DD"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_28"
        android:lineSpacingExtra="@dimen/dp_4"
        android:text="@string/account_remove_content3"
        android:textColor="@color/FF999999"
        android:textSize="@dimen/sp_12" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/bt_account_remove_sure"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_gravity="bottom"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginRight="@dimen/dp_23"
        android:layout_marginBottom="@dimen/dp_40"
        android:background="@drawable/shape_setting_bt"
        android:text="确定"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16" />

</LinearLayout>
