<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/dp_16"
    android:paddingEnd="@dimen/dp_16">

    <TextView
        android:id="@+id/tvDescribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/wallet_kc"
        android:textColor="#ff84848f"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDescribe"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/wallet_date"
        android:textColor="#ff5f5f69"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/wallet_count"
        android:textColor="#ff84848f"
        android:textSize="14sp"
        tools:ignore="RelativeOverlap" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_below="@+id/tvDate"
        android:layout_marginTop="@dimen/dp_16"
        android:background="#232030" />


</RelativeLayout>
