<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/dp_16"
    android:paddingEnd="@dimen/dp_16">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/tvDescribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet_kc"
            android:textColor="#666666"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDescribe"
            android:layout_marginTop="@dimen/dp_6"
            android:text="@string/wallet_date"
            android:textColor="#666666"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/tvMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/wallet_count"
            android:textColor="#333333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvMoney"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/dp_4"
            android:text="@string/wallet_kc"
            android:textColor="#666666"
            android:textSize="14sp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/rl"
        android:layout_marginTop="@dimen/dp_16"
        android:background="#F5F5F5" />


</RelativeLayout>
